appId: com.truex.membraneclient
---
- launchApp:
    clearState: true
- tapOn: "your@email.com"
- inputText: "test@example.com"
- tapOn: "Enter your password"
- inputText: "password123"
- tapOn: "Establish Secure Session"
- assertVisible: "Welcome back, test! 👋"
